[package]
name = "mmvc_client"
version = "0.3.0"
authors = ["ku-chan"]
description = "MMVC ClientのRust版"
edition = "2021"

[dependencies]
ort = "1.16.3"
ndarray = "0.15"
rustfft = "6.2.0"
cpal = "0.15.3"
rubato = "0.15.0"
crossbeam-channel = "0.5.13"
speexdsp-resampler = "0.1.0"
anyhow = "1.0.89"
windows = { version = "0.58.0", features = ["Win32_System_Threading"] }
clap = "4.5.17"
env_logger = "0.11.5"
egui = "0.28.1"
eframe = "0.28.1"
rfd = "0.15.0"
